[HOTFIX] Update paths to Sightly Template Files - (Fixes issues when some template files load other template files)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12 col-lg-11 featured-story-component__row--nopadding ${ componentList.odd ? 'col-lg-pull-0' : 'col-lg-offset-1' }">
 
           <!-- Start: Rendition Image Component -->
-          <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
+          <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
             <sly data-sly-call="${ tpl.module @ data=component.image }"></sly>
           </sly>
           <!-- End: Rendition Image Component -->
