--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
@@ -2,7 +2,7 @@
   <div class="l2-hero l2-hero--vertical-align">
 
     <!-- Start: Rendition Background Component -->
-    <sly data-sly-use.tpl="../../../shared/templates/rendition-background.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-background.html">
       <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
     </sly>
     <!-- End: Rendition Background Component -->
