--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-tags.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-tags.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.data="${ '../data/view-tags-data.js' @testdata=properties.testdata }">
-    <sly data-sly-use.tpl="../../shared/templates/module-resource-list.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-resource-list.html">
         <sly data-sly-call="${ tpl.module @data=data }"></sly>
     </sly>
 </sly>
