--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation-filters.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-filters.html">
       <sly data-sly-call="${ tpl.module @ activeFilters=data.activeFilters }"></sly>
     </sly>
 
