--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
@@ -9,7 +9,7 @@
                     <a data-sly-test="${data.cta.url.length > 0}" class="b-button b-button__primary ${data.backgroundColor == '#005EB8' ? 'b-button__primary--dark' : 'b-button__primary--light'} feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="../../../shared/templates/rendition-background.html">
+            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="eaton/static-components/shared/templates/rendition-background.html">
                 <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
             </div>
 
