--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
@@ -6,7 +6,7 @@
                   <span class="sr-only">${item.title}</span>
                 </a>
                 <div class="col-xs-12 related-products-component__card rendition">
-                    <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
+                    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
                         <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
                     </sly>
                 </div>
