--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-category-hero.html
@@ -6,7 +6,7 @@
                 <img src="${data.image}" class="hidden-xs img-responsive category-hero__header-image" /> -->
                 <div class="category-hero__header-image img-responsive">
                     <!-- Start: Rendition Image Component -->
-                    <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
+                    <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
                     <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
                     </sly>
                     <!-- End: Rendition Image Component -->
