--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-feature-block-left.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-feature-block-left.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.data="${ '../data/view-feature-block-left-data.js' @testdata=properties.testdata }">
-    <sly data-sly-use.tpl="../../shared/templates/module-feature-block.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-feature-block.html">
         <sly data-sly-call="${ tpl.module @data=data }"></sly>
     </sly>
 </sly>
