--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/intra-tab-link/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/intra-tab-link/views/view-default.html
@@ -1,5 +1,5 @@
 <sly data-sly-use.viewData="${ '../data/view-default-data.js' @testdata=properties.testdata }">
-  <sly data-sly-use.tpl="../../shared/templates/module-intra-tab-link.html">
+  <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-intra-tab-link.html">
     <sly data-sly-call="${ tpl.data @ data=viewData.intraTab }"></sly>
   </sly>
 </sly>
