--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
@@ -7,7 +7,7 @@
                     <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="../../shared/templates/rendition-image.html">
+            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
                 <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
             </div>
         </div>
