--- a/eaton.frontend/src/components/link-list/css/views/_view-2column.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-2column.scss
@@ -2,9 +2,6 @@
   overflow: hidden;
 
   & > div {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
 
     .col-xs-12 {
       padding: 0;
@@ -13,5 +10,15 @@
 
   &__link {
     margin-bottom: $spacing__sm;
+  }
+
+  @include media-desktop-and-up {
+
+    & > div {
+
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+    }
   }
 }
