fix select element of form

--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -260,6 +260,7 @@
     padding: 15px 100px;
     color: $color__primary-blue;
     border-color: $color__primary-blue;
+    border-radius: 0;
 
     &:hover {
       color: $color__white;
