--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
@@ -21,4 +21,4 @@
   .eaton-how-to-buy .container .col-md-9 .col-md-6:nth-child(2n+1) { padding-left: 30px; }
   .eaton-how-to-buy .container .col-md-9 .row { margin: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; } }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { .eaton-how-to-buy .container.row .col-md-9 > .row .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 41%; flex: 0 0 41%; } }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { .eaton-how-to-buy .container .col-md-9 .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 41%; flex: 0 0 41%; } }
