--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -53,7 +53,7 @@
 
 .country-selector-drawer__header .row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.country-selector-drawer__title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-right: 20px; }
+.country-selector-drawer__title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-right: 20px; margin-bottom: 0; }
 
 .country-selector-drawer__item { border-radius: 0; -webkit-box-shadow: none; box-shadow: none; }
 
@@ -62,10 +62,12 @@
 .country-selector-drawer__item-list { padding: 0; list-style: none; overflow: hidden; margin-bottom: 0; }
 
 @media screen and (min-width: 992px) { .country-selector-drawer__header { margin-bottom: 30px; }
+  .country-selector-drawer__title { font-size: 2.6rem; line-height: 3.4rem; padding: 30px 0; }
   .country-selector-drawer__region-list { list-style: none; }
   .country-selector-drawer__region-list li { margin-bottom: 30px; }
   .country-selector-drawer__region-list a { color: #FFF; padding: 10px 0; }
   .country-selector-drawer__region-list a.active { color: #005EB8; background: #EEF0F2; }
+  .country-selector-drawer__panel-list { border-left: 1px solid rgba(204, 210, 215, 0.5); padding-left: 30px; min-height: 420px; }
   .country-selector-drawer__item-list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .country-selector-drawer__item { border: 0; }
   .country-selector-drawer__item-header { display: none; }
