--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -3,7 +3,7 @@
   <div class="country-selector-drawer">
 
     <!--/* Header *-->
-    <div class="col-sm-12 country-selector-drawer__header">
+    <div class="country-selector-drawer__header">
       <div class="container">
         <div class="row">
           <h2 class="country-selector-drawer__title">${data.header}</h2>
@@ -16,7 +16,7 @@
     </div>
 
     <!--/* List of Regions & Countries/ Languages *-->
-    <div class="container">
+    <div class="container country-selector-drawer__container">
       <div class="row">
         <ul class="u-visible-desktop col-md-3 country-selector-drawer__region-list" data-sly-list="${data.regionList}">
           <li>
