--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -29,6 +29,7 @@
             data-parent="country-selector-drawer__item">
                 <span class="sr-only">Select your location</span>
                 ${item.regionName}
+                <i class="country-selector-drawer__region-icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
             </a>
             </li>
         </ul>
