--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -8,13 +8,15 @@
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__panel:first-child { padding-top: 0; } }
 
-.secondary-content-accordion__download-icon .icon { color: #005EB8; font-size: 1.5rem; margin-right: 20px; }
+.secondary-content-accordion__download-icon .icon { color: #005EB8; font-size: 2.5rem; margin-right: 20px; }
+
+@media screen and (max-width: 767px) { .secondary-content-accordion__download-icon .icon { font-size: 2rem; } }
 
 .secondary-content-accordion__badge { background-color: #ED8B00; color: #FFF; padding: 6px 10px; font-size: 1.125rem; bottom: 7px; position: relative; left: 10px; }
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__column:first-child { padding-right: 35%; } }
 
-.secondary-content-accordion__body { padding-bottom: 50px; padding-top: 25px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+.secondary-content-accordion__body { padding: 25px 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__body { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; } }
 
