--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -57,11 +57,23 @@
 
 .country-selector-drawer__panel-list { margin-bottom: 0; }
 
-.country-selector-drawer__item { border-radius: 0; -webkit-box-shadow: none; box-shadow: none; }
+.country-selector-drawer__item { border-radius: 0; -webkit-box-shadow: none; box-shadow: none; background: transparent; }
 
 .country-selector-drawer__item-header { position: relative; }
 
 .country-selector-drawer__item-list { padding: 0; list-style: none; overflow: hidden; margin-bottom: 0; }
+
+.country-selector-drawer__item-country-flag { margin-right: 10px; width: 25px; height: 25px; }
+
+.country-selector-drawer__item-country-name { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+
+.country-selector-drawer__item-country-label { text-transform: uppercase; font-weight: bold; }
+
+.country-selector-drawer__item-language-list { padding: 0; margin: 0; list-style: none; }
+
+.country-selector-drawer__item-language a { color: #333F48; }
+
+.country-selector-drawer__item-language a:hover, .country-selector-drawer__item-language a:focus { color: #333F48; }
 
 @media screen and (min-width: 992px) { .country-selector-drawer__title { font-size: 2.6rem; line-height: 3.4rem; padding: 30px 0; }
   .country-selector-drawer__container { margin-top: 30px; margin-bottom: 50px; }
