--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -67,13 +67,13 @@
 
 .country-selector-drawer__item-country-name { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.country-selector-drawer__item-country-label { text-transform: uppercase; font-weight: bold; }
+.country-selector-drawer__item-country-label { text-transform: uppercase; font-weight: bold; color: #FFF; }
 
 .country-selector-drawer__item-language-list { padding: 0; margin: 0; list-style: none; }
 
-.country-selector-drawer__item-language a { color: #333F48; }
+.country-selector-drawer__item-language a { color: #FFF; }
 
-.country-selector-drawer__item-language a:hover, .country-selector-drawer__item-language a:focus { color: #333F48; }
+.country-selector-drawer__item-language a:hover, .country-selector-drawer__item-language a:focus { color: #FFF; }
 
 @media screen and (min-width: 992px) { .country-selector-drawer__title { font-size: 2.6rem; line-height: 3.4rem; padding: 30px 0; }
   .country-selector-drawer__container { margin-top: 30px; margin-bottom: 50px; }
@@ -86,4 +86,9 @@
   .country-selector-drawer__item-list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .country-selector-drawer__item { border: 0; }
   .country-selector-drawer__item-header { display: none; }
-  .country-selector-drawer__item-country { -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; padding: 0 0 30px; } }
+  .country-selector-drawer__item-body { padding-bottom: 30px; }
+  .country-selector-drawer__item-country { -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; padding: 0 0 30px; }
+  .country-selector-drawer__item-country-name { padding-bottom: 8px; }
+  .country-selector-drawer__item-language { display: inline-block; padding: 0 8px; border-right: 1px solid #333; }
+  .country-selector-drawer__item-language:first-child { padding-left: 0; }
+  .country-selector-drawer__item-language:last-child { border: 0; } }
