[Eaton-30] Country Selector Drawer: Desktop styling - Language List (completed)

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -137,7 +137,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
 
     &__panel-list {
       border-left: 1px solid $border-color;
-      padding-left: $spacing__sm;
+      padding-left: 5px;
       min-height: 420px;
     }
 
@@ -154,23 +154,19 @@ $border-color: rgba($color__secondary-gray4, 0.5);
       display: none;
     }
 
-    &__item-body {
-      padding-bottom: $spacing__sm;
-    }
-
     &__item-country {
       flex-basis: 33.33%;
-      padding: 0 0 $spacing__sm;
+      padding: 0 25px 40px 25px;
     }
 
     &__item-country-name {
-      padding-bottom: 8px;
+      padding-bottom: $spacing__sm;
     }
 
     &__item-language {
       display: inline-block;
       padding: 0 8px;
-      border-right: 1px solid #333;
+      border-right: 1px solid $color__white;
 
       &:first-child {
         padding-left: 0;
