--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -55,7 +55,7 @@
                     <div id="drawer-collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="drawer-${item.regionId}">
                         <div class="country-selector-drawer__item-body">
                             <ul data-sly-list.country="${item.countryList}" class="country-selector-drawer__item-list">
-                                <li class="col-xs-12 col-md-3 country-selector-drawer__item-country">
+                                <li class="country-selector-drawer__item-country">
                                     <div class="country-selector-drawer__item-country-name">
                                       <i class="country-selector-drawer__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
                                       <span class="country-selector-drawer__item-country-label b-eyebrow-small">${country.countryName}</span>
