--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -4,9 +4,11 @@
 
 .secondary-content-accordion__header--title:hover, .secondary-content-accordion__header--title:active, .secondary-content-accordion__header--title:focus { text-decoration: none; }
 
-.secondary-content-accordion__panel { border-bottom: 3px solid #EEF0F2; padding: 30px 0 0; }
+.secondary-content-accordion__panel { border-bottom: 3px solid #EEF0F2; padding: 30px 0 0; -webkit-box-shadow: none; box-shadow: none; }
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__panel:first-child { padding-top: 0; } }
+
+.secondary-content-accordion .panel { border-radius: 0; }
 
 .secondary-content-accordion__download-icon .icon { color: #005EB8; font-size: 2.5rem; margin-right: 20px; }
 
