fix mobile image for landing hero

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-landing-hero.scss
@@ -75,9 +75,10 @@
 
 @include media-mobile-only {
   .carousel-component-slide {
-    &__image--mobile {
-      min-height: 750px;
+    img {
+      min-height: 780px;
     }
+
   }
 
   .carousel-indicators {
