--- a/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
@@ -69,6 +69,10 @@
       }
     }
 
+    &__header, &__description {
+      margin-bottom: 0;
+    }
+
     &__text-wrapper {
       width: calc(100% - 100px);
       display: flex;
