--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -143,6 +143,7 @@
 
 @media screen and (min-width: 992px) { .eaton-topic-link-white__icon { width: 70px; margin-bottom: 0; margin-right: 30px; display: inline-block; }
   .eaton-topic-link-white__icon img { width: 70px; height: 70px; }
+  .eaton-topic-link-white__header, .eaton-topic-link-white__description { margin-bottom: 0; }
   .eaton-topic-link-white__text-wrapper { width: calc(100% - 100px); display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: right; }
   .eaton-topic-link-white__text-wrapper.no-icon { width: 100%; }
   .eaton-topic-link-white__text { width: 70%; -webkit-box-flex: 0; -ms-flex: 0 0 70%; flex: 0 0 70%; }
