--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -51,13 +51,13 @@
 
 .country-selector-drawer__header { background: #333F48; }
 
-.country-selector-drawer__header .row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.country-selector-drawer__header .row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin: 0; }
 
 .country-selector-drawer__title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-right: 20px; margin-bottom: 0; }
 
 .country-selector-drawer__panel-list { margin-bottom: 0; }
 
-.country-selector-drawer__item { border-radius: 0; -webkit-box-shadow: none; box-shadow: none; background: transparent; }
+.country-selector-drawer__item { border-radius: 0; border: 0; -webkit-box-shadow: none; box-shadow: none; background: transparent; }
 
 .country-selector-drawer__item-header { position: relative; }
 
@@ -74,6 +74,16 @@
 .country-selector-drawer__item-language a { color: #FFF; }
 
 .country-selector-drawer__item-language a:hover, .country-selector-drawer__item-language a:focus { color: #FFF; }
+
+@media screen and (max-width: 991px) { .country-selector-drawer .container { width: auto; padding: 0; }
+  .country-selector-drawer .container .row { margin: 0; }
+  .country-selector-drawer__header { padding: 15px 30px; }
+  .country-selector-drawer__title { font-size: 1.6rem; line-height: 2.0rem; }
+  .country-selector-drawer__icon { font-size: 1.8rem; }
+  .country-selector-drawer__panel-list { padding: 0; }
+  .country-selector-drawer__panel-list .country-selector-drawer__item { margin-top: 3px !important; }
+  .country-selector-drawer__item-header { padding: 15px 30px; background: #333F48; }
+  .country-selector-drawer__item-title { font-size: 1.4rem; line-height: 1.8rem; margin-bottom: 0; } }
 
 @media screen and (min-width: 992px) { .country-selector-drawer__title { font-size: 2.6rem; line-height: 3.4rem; padding: 30px 0; }
   .country-selector-drawer__container { margin-top: 30px; margin-bottom: 50px; }
