--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/full-page-drawer/css/full-page-drawer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/full-page-drawer/css/full-page-drawer.css
@@ -2,6 +2,7 @@
 
 .full-page-drawer__headline { background: #333F48; padding: 30px 0; }
 
-@media screen and (max-width: 991px) { .full-page-drawer { position: fixed; top: 0; width: 100%; height: 100%; overflow: auto; visibility: hidden; -webkit-transform: translateY(100%); transform: translateY(100%); z-index: 220; } }
+@media screen and (max-width: 991px) { .full-page-drawer { position: fixed; top: 0; width: 100%; height: 100%; overflow: auto; visibility: hidden; -webkit-transform: translateY(100%); transform: translateY(100%); z-index: 220; }
+  .full-page-drawer__country-selector { padding-bottom: 15px; } }
 
 @media screen and (min-width: 992px) { .full-page-drawer { max-height: 0; overflow: hidden; visibility: hidden; } }
