--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -82,8 +82,14 @@
   .country-selector-drawer__icon { font-size: 1.8rem; }
   .country-selector-drawer__panel-list { padding: 0; }
   .country-selector-drawer__panel-list .country-selector-drawer__item { margin-top: 3px !important; }
-  .country-selector-drawer__item-header { padding: 15px 30px; background: #333F48; }
-  .country-selector-drawer__item-title { font-size: 1.4rem; line-height: 1.8rem; margin-bottom: 0; } }
+  .country-selector-drawer__item-header { padding: 20px 30px; background: #333F48; }
+  .country-selector-drawer__item-title { font-size: 1.4rem; line-height: 1.8rem; margin-bottom: 0; }
+  .country-selector-drawer__item-body { padding: 0 30px; }
+  .country-selector-drawer__item-country { border-bottom: 1px solid rgba(204, 210, 215, 0.5); padding: 25px 0; }
+  .country-selector-drawer__item-country:last-child { border-bottom: 0; }
+  .country-selector-drawer__item-country-name { margin-bottom: 20px; }
+  .country-selector-drawer__item-language-list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; padding-left: 35px; }
+  .country-selector-drawer__item-language { -ms-flex-preferred-size: 50%; flex-basis: 50%; } }
 
 @media screen and (min-width: 992px) { .country-selector-drawer__title { font-size: 2.6rem; line-height: 3.4rem; padding: 30px 0; }
   .country-selector-drawer__container { margin-top: 30px; margin-bottom: 50px; }
