--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -1,8 +1,8 @@
-.country-selector-accordion__item-icon::after { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
+.country-selector-accordion__item-icon::after, .country-selector-drawer__item-icon::after { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
 
-.country-selector-accordion__item-link[aria-expanded="true"] ~ .country-selector-accordion__item-icon::after { content: "\EA21"; }
+.country-selector-accordion__item-link[aria-expanded="true"] ~ .country-selector-accordion__item-icon::after, .country-selector-drawer__item-link[aria-expanded="true"] ~ .country-selector-drawer__item-icon::after { content: "\EA21"; }
 
-.country-selector-accordion__item-icon::after { content: "\EA22"; }
+.country-selector-accordion__item-icon::after, .country-selector-drawer__item-icon::after { content: "\EA22"; }
 
 .country-selector-accordion__header { margin-bottom: 0; }
 
@@ -61,6 +61,8 @@
 
 .country-selector-drawer__item-header { position: relative; }
 
+.country-selector-drawer__item-icon { color: #FFF; font-size: 1.8rem; }
+
 .country-selector-drawer__item-list { padding: 0; list-style: none; overflow: hidden; margin-bottom: 0; }
 
 .country-selector-drawer__item-country-flag { margin-right: 10px; width: 25px; height: 25px; }
@@ -82,8 +84,8 @@
   .country-selector-drawer__icon { font-size: 1.8rem; }
   .country-selector-drawer__panel-list { padding: 0; }
   .country-selector-drawer__panel-list .country-selector-drawer__item { margin-top: 3px !important; }
-  .country-selector-drawer__item-header { padding: 20px 30px; background: #333F48; }
-  .country-selector-drawer__item-title { font-size: 1.4rem; line-height: 1.8rem; margin-bottom: 0; }
+  .country-selector-drawer__item-header { padding: 20px 30px; background: #333F48; display: -webkit-box; display: -ms-flexbox; display: flex; }
+  .country-selector-drawer__item-title { font-size: 1.4rem; line-height: 1.8rem; margin-bottom: 0; padding-left: 20px; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
   .country-selector-drawer__item-body { padding: 0 30px; }
   .country-selector-drawer__item-country { border-bottom: 1px solid rgba(204, 210, 215, 0.5); padding: 25px 0; }
   .country-selector-drawer__item-country:last-child { border-bottom: 0; }
