--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -153,7 +153,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
       font-size: 1.4rem;
       line-height: 1.8rem;
       margin-bottom: 0;
-      padding-left: 20px;
+      padding-right: 20px;
       flex-grow: 1;
     }
 
