Faceted Navigation - Update Active filters for testing purposes (SearchResults Page, Product grid Pages)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -63,7 +63,7 @@
                   <a target="${ facetvalue.target }" href="${ facetValue.url }">
                     <input id="${ facetItemID }"
                       class="input input--small"
-                      data-sly-attribute.checked="${ facetvalue.active }"
+                      data-sly-attribute.checked="${ facetvalue.isChecked }"
                       value="${ facetItemID }"
                       type="${ facetInputType }"
                     >
